# airflow_ans

./: README.md  exemplo_01.py  pyproject.toml
.astro/: config.yaml
dags/: exemplo_01.py  main.py
